--- a/public/index.html
+++ b/public/index.html
@@ -3,11 +3,11 @@
 
 <head>
   <meta charset="utf-8" />
-  <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
+  <link rel="icon"
+    href="https://img.freepik.com/free-psd/two-puzzle-pieces-interlocking-red-white-solution_84443-34492.jpg?t=st=1737885043~exp=1737888643~hmac=11d0d294bd217d37a6fc3703fc995c6945ad2115a22769ca79213c498cd1d48e&w=826" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta name="theme-color" content="#000000" />
-  <meta name="description" content="Sudoku Game" />
-  <title>Sudoku Game</title>
+  <meta name="description" content="A Sudoku Game Project" />
+  <title>The Sudoku</title>
 </head>
 
 <body>
